<resources>
    <string name="app_name">ToDoAppMVP</string>
    <string name="create_task">Create a new task</string>
    <string name="whats_up_user">What\'s up, %1$s!</string>
    <string name="category">CATEGORIES</string>
    <string name="today_tasks">TODAY\'S TASKS</string>
    <string name="today">Today</string>
    <string name="new_task">New Task</string>
    <string name="enter_new_task">Enter new Task</string>
    <string name="the_task_was_deleted">The task was deleted</string>
    <string name="undo">UNDO</string>
    <string name="lorem_ipsum">Crie um arquivo de layout que você usará posteriormente para o conteúdo de um fragmento. Você também precisará definir uma string para o conteúdo do fragmento. O exemplo a seguir contém uma visualização de texto que exibe esse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  hamburger options  -->
    <string name="templates">Templates</string>
    <string name="categories">Categories</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="task_removed">Task removed</string>
    <string name="offline_synchronization">Offline synchronization</string>
    <string name="synchronization">Synchronization</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="username_is_required">Username is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="login_message_error_username_or_password_invalid">Username or passwrod invalid</string>
    <string name="loading">Loading...</string>

    <string name="error_updating_task">Erro ao atualizar task</string>
    <string name="error_deleting_task">Erro ao deletar task</string>
    <string name="not_found_tasks">Not found tasks!</string>
    <string name="tasks_is_empty">Ops! No tasks added. Start creates a new task for you</string>
    <string name="server_error_500">Ops! On server error!</string>
    <string name="error_load_tasks">Ops! Error to load all tasks!</string>
    <string name="failed_to_connect_to_server">failed to connect to server</string>
    <string name="tasks_error_message">Ops! Algo de errado não está certo</string>
</resources>