<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.edit_task.EditTaskActivity">

    <FrameLayout
        android:id="@+id/frame_layout_back_to_list"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/outline_icon_button"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:src="@drawable/ic_icon_close" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_new_task"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingVertical="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/outlineButtonColor"
            android:textSize="24sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_icon_button"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_calendar_today" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/today"
                    android:textColor="@color/outlineButtonColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/outline_icon_button">

                <RadioButton
                    android:id="@+id/rb_is_done"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="7dp" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_icon_create_new_folder" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginHorizontal="32dp"
                android:src="@drawable/ic_icon_flag" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_icon_moon_brightness" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_new_task_button"
        android:clickable="true"
        android:gravity="center"
        android:paddingHorizontal="32dp"
        android:paddingVertical="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="12dp"
            android:rotation="90"
            android:src="@drawable/ic_arrow_back" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>